2004-04-09  graydon hoare  <graydon@pobox.com>

	* app_state.cc: Fix a couple file path constructions.
	* file_io.cc (book_keeping_file): Make one variant static.
	* manifest.cc: Remove some dead code in walkers.
	* work.cc: Ditto.
	* rcs_file.cc: fcntl fix from Paul Snively for OSX.

2004-04-09  graydon hoare  <graydon@pobox.com>

	* file_io.cc: Fix boost filesystem "." and ".." breakage.
	* lua.cc: Fix format of log entry.
	* monotone.cc: Log locale settings on startup.
	* sanity.cc: Dump prefix on --verbose activation.
	* testsuite/t_i18n_file.at: Fix autotest LANG breakage.
	* testsuite/t_null.at: Account for chatter with --verbose.

2004-04-09  graydon hoare  <graydon@pobox.com>

	* configure.ac: Comment out check for sse2,
	set bundling to true by default.
	* INSTALL: describe changes to bundling.
	* Makefile.am: Remove vestiges of depot.

2004-04-07  graydon hoare  <graydon@pobox.com>

	* adns/*: 
	* network.{cc,hh}:
	* proto_machine.{cc,hh}:
	* {http,smtp,nntp}_tasks.{cc,hh}:
	* tests/t_{http,smtp,nntp,proxy}.at:
	* url.{cc,hh}:
	* depot.cc:
	Delete files.
	* commands.cc:
	* lua.{cc,hh}:
	* database.{cc,hh}: Remove network/queue stuff.
	* configure.ac: 
	* constants.{cc,hh}:
	* tests/t_{netsync,singlecvs,cvsimport}.at:
	* testsuite.at:
	* transforms.{cc,hh}:
	* unit_tests.{cc,hh}:
	* vocab_terms.hh:
	* vocab.{cc,hh}:
	* Makefile.am: Adjust for deletions.
	* app_state.hh: Cleanup.
	* monotone.texi: Fix some typos.
	* packet.{cc,hh}: Implement database ordering.
	* netsync.cc: Massage to use new packet logic.
	* commands.cc:
	* std_hooks.lua: Add initial selector stuff.

2004-03-29  graydon hoare  <graydon@pobox.com>

	* monotone.spec: Update for 0.11 release.

2004-03-29  graydon hoare  <graydon@pobox.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Set.
	* commands.cc: Tidy up / narrow output width.
	* patch_set.cc: Likewise.
	* monotone.texi: Cleanups for PDF generation.

2004-03-28  graydon hoare  <graydon@pobox.com>

	* NEWS: Mention 0.11 release.