@@ -207,9 +207,13 @@ bool
 cert::operator<(cert const & other) const
 {
   return (ident < other.ident)
-    || ((ident == other.ident) && value < other.value)
-    || (((ident == other.ident) && value == other.value) && key < other.key)
-    || ((((ident == other.ident) && value == other.value) && key == other.key) && sig < other.sig);
+    || ((ident == other.ident) && name < other.name)
+    || (((ident == other.ident) && name < other.name) 
+	&& value < other.value)    
+    || ((((ident == other.ident) && name < other.name) 
+	 && value == other.value) && key < other.key)
+    || (((((ident == other.ident) && name < other.name) 
+	  && value == other.value) && key == other.key) && sig < other.sig);
 }
 
 bool 
@@ -217,6 +221,7 @@ cert::operator==(cert const & other) const
 {
   return 
     (ident == other.ident)
+    && (name == other.name)
     && (value == other.value)
     && (key == other.key)
     && (sig == other.sig);
